--- a/hanzi9grid/hanzi9grid.html
+++ b/hanzi9grid/hanzi9grid.html
@@ -64,7 +64,10 @@
         }
     </style>
 </head>
-<body>
+<body>   
+   padding-top: 100px;
+   padding-bottom: 100px;
+
     <h1>汉字九宫格</h1>
     <div class="grid-container">
         <!-- 九宫格 -->
