--- a/hanzi9grid/hanzi9grid.html
+++ b/hanzi9grid/hanzi9grid.html
@@ -6,8 +6,9 @@
     <title>汉字九宫格</title>
     <style>
         body, html {
-            margin: 0;
-            padding: 0;
+            margin-top: 50px ;
+            margin-bottom: 20px ;
+            padding-bottom: 50px;
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -20,7 +21,8 @@
         h1 {
             font-size: 36px;
             text-align: center;
-            margin-bottom: 20px;
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
 
         .grid-container {
@@ -64,10 +66,7 @@
         }
     </style>
 </head>
-<body>   
-   padding-top: 100px;
-   padding-bottom: 100px;
-
+<body> 
     <h1>汉字九宫格</h1>
     <div class="grid-container">
         <!-- 九宫格 -->
