--- a/cangjie/lianxi.html
+++ b/cangjie/lianxi.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>仓颉单字练习</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="preload" href="Planmi.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="extra.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <style>
         @font-face {
             font-family: 'PlanMi';
             src: url('PlanMi.ttf') format('truetype');
         }
-		@font-face {
-			font-family: 'Extra';
-			src: url('extra.ttf') format('truetype');
+	@font-face {
+	     font-family: 'Extra';
+	     src: url('extra.ttf') format('truetype');
 }
         #characterDisplay {
-            font-family: 'Sans Serif', 'PlanMi', 'Extra';
+            font-family:'PingFang SC', 'Droid Sans Fallback', 'Microsoft YaHei', 'PlanMi', 'Extra', sans-serif;
             font-size: 190px;
             text-align: center;
             width: 200px;
