--- a/cangjie/lianxi.html
+++ b/cangjie/lianxi.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>仓颉单字练习</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="preload" href="Planmi.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-    <link rel="preload" href="extra.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="NotoSans.woff" as="font" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" href="Planmi.woff" as="font" type="font/woff" crossorigin="anonymos">
+    <link rel="preload" href="extra.woff"  as="font" type="font/woff" crossorigin="anonymous">
     <style>
         @font-face {
             font-family: 'NotoSans';
             src: url('NotoSans.woff') format('woff');
-		}
+	}
         @font-face {
             font-family: 'PlanMi';
             src: url('PlanMi.woff') format('woff');
@@ -19,7 +20,7 @@
 	@font-face {
 	     font-family: 'Extra';
 	     src: url('extra.woff') format('woff');
-}
+	}
         #characterDisplay {
             font-family:'NotoSans', 'PlanMi', 'Extra';
             font-size: 190px;
