--- a/zitools/CJK-J.html
+++ b/zitools/CJK-J.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>字统网CJK-J索引</title>
-	<link rel="preload" href="./KageCJK-J.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="./KageCJK-J.woff2" as="font" type="font/woff2" crossorigin>
 <style>
+  @font-face {
+    font-family: 'KageCJK-J';
+    src: url('./KageCJK-J.woff2') format('woff2');
+    font-display: swap;
+  }
   body {
     font-family: "KageCJK-J" , 黑体, sans-serif;
   }
