--- a/zitools/CJK-J.html
+++ b/zitools/CJK-J.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>字统网CJK-J索引</title>
-	<link rel="preload" href="./KageCJK-J.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="./PlanJ.ttf" as="font" type="font/ttf" crossorigin>
 <style>
   @font-face {
     font-family: 'KageCJK-J';
-    src: url('./KageCJK-J.woff2') format('woff2');
+    src: url('./PlanJ.ttf') format('ttf');
     font-display: swap;
   }
   body {
-    font-family: "KageCJK-J" , 黑体, sans-serif;
+    font-family: "PlanJ" , 黑体, sans-serif;
   }
   #characterTable {
       width: 100%;
