--- a/zitools/CJK-J.html
+++ b/zitools/CJK-J.html
@@ -7,7 +7,7 @@
 	<link rel="preload" href="./PlanJ.ttf" as="font" type="font/ttf" crossorigin>
 <style>
   @font-face {
-    font-family: 'KageCJK-J';
+    font-family: 'PlanJ';
     src: url('./PlanJ.ttf') format('ttf');
     font-display: swap;
   }
