--- a/zitools/CJK-J.html
+++ b/zitools/CJK-J.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>字统网CJK-J索引</title>
-	<link rel="preload" href="./PlanJ.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="./PlanJ.woff2" as="font" type="font/woff2" crossorigin>
 <style>
   @font-face {
     font-family: 'PlanJ';
-    src: url('./PlanJ.ttf') format('ttf');
+    src: url('./PlanJ.woff2') format('woff2');
     font-display: swap;
   }
   body {
@@ -209,3 +209,4 @@ function init() {
 window.onload = init;
 </script>
 </html>
+ 
